--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css"> 
-    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./fonts/fonts.css"> 
   </head>
   <body class="page">
@@ -40,20 +40,13 @@
             </li>
           </ul>
         </nav>
-        <div class="header__right-corner">
-        </div>
       </div>
-      <section class="focusee header__main">
-        <div class="header__title header__main-title">
-          <h1 class="big-title">no focus</h1>
-        </div>
-        <div class="header__text header__main-text">
-          <p class="title">Что делать, когда не можешь делать ничего
-            Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
-        </div>
-        <div class="header__left-corner"> 
-        </div>
-      </section>
+      <h1 class="big-title">no focus</h1>
+      <div class=" header__text">
+        <p class="header__content">Что делать, когда не можешь делать ничего.
+          Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        </p>
+      </div>
     </header>
 
     <main class="main content">
@@ -124,13 +117,14 @@
           </div>
         </div>
       </section>
+
       <section class="pictures">
-        <h3 class="pictures__title title">А можно в картинках?</h3>
-        <img src="images/sunset.png" alt="расвет" class="sunset img" loading="lazy">
-        <img src="images/ice-cream.png" alt="мороженное" class="ice img" loading="lazy">
-        <img src="images/tape.png" alt="касеты" class="tape img" loading="lazy">
-        <img src="images/books.png" alt="книги " class="books img" loading="lazy">
-        <img src="images/street.png" alt="улица" class="street img" loading="lazy">
+        <h2 class="pictures__title ">А можно в картинках?</h2>
+        <img src="images/sunset.png" alt="Рассвет. Солнце поднимается между гор освещая воду " class="sunset img" loading="lazy">
+        <img src="images/ice-cream.png" alt="большая порция мороженного в миске" class="ice img" loading="lazy">
+        <img src="images/tape.png" alt="старая касета для магнитофона" class="tape img" loading="lazy">
+        <img src="images/books.png" alt="стопка книг на фоне стены" class="books img" loading="lazy">
+        <img src="images/street.png" alt="улица японского города" class="street img" loading="lazy">
       </section>
     </main>
       
