--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="how__content">
           <div class="how__content-lot">
-            <h3 class="title">5 простых (на самом деле не очень) советов</h3>
+            <h3 class="titlee">5 простых (на самом деле не очень) советов</h3>
           </div>
           
           <div class="how__content-lot">
