--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css"> 
     <link rel="stylesheet" href="./fonts/fonts.css"> 
+    <link rel="icon" type="image/svg" href="./images/favicon.svg">
+    <link rel="icon" type="image/ico" href="./images/favicon.ico">
+    <link rel="icon" type="image/png" href="./images/mobile-icon.png">
   </head>
   <body class="page">
     <header class="header decorated-zone">
